@@ -1,6 +1,8 @@
 Revision history for Perl extension Wx.
 
 0.78
+	- Added wxRichTextBuffer and wxRichTextFileHandler,
+	  wxRichTextHTMLHandler, wxRichTextXMLHandler (2.7).
 
 0.77  Thu Aug 23 21:59:25 CEST 2007
 	- Added wxGraphicsContext (2.7) and some related classes
